版本01:在前端新增了查询历史记录功能